# sceneweave

./: .gitignore  alembic.ini  main.py  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
agent_runtime_profile/: CLAUDE.md
alembic/: env.py
data/: sceneweave.db
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
lib/: __init__.py  config.py  cost_calculator.py  data_validator.py  logging_config.py  openai_shared.py  project_manager.py  prompt_builders_reference.py  prompt_builders_script.py  providers.py  script_generator.py  usage_tracker.py
projects/: .sceneweave.db  .sceneweave.db-shm  .sceneweave.db-wal  .session_store_migration_done
public/: skill.md.template
scripts/: bootstrap_new_project.sh  migrate_sqlite_to_orm.py  new-worktree.sh
server/: __init__.py  app.py  auth.py  cli.py  deps.py  uvicorn_loop.py
tests/: conftest.py  test_api_keys_router.py  test_app_startup_migration.py  test_assistant_service_more.py  test_assistant_service_streaming.py  test_auth_api_key.py  test_cost_calculator.py  test_custom_providers_api.py  test_data_validator.py  test_db_engine.py  test_duration_presets.py  test_generate_video_skill.py  test_generation_worker_module.py  test_jianying_draft_service.py  test_model_discovery.py  test_newapi_video_backend.py  test_openai_text_backend.py  test_openai_video_backend.py  test_project_manager_concurrent_save.py  test_project_manager_symlink.py  test_projects.py  test_projects_archive_routes.py  test_prompt_builders_script_duration.py  test_script_generator.py  test_system_version_api.py  (+6 more)
(+209 files in other folders)
