[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sceneweave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.46.0",
]

[project.scripts]
sceneweave-api = "server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lib", "server"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
